2010-01-07  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Maciej Stachowiak.

        Allow call sites to determine if ASSERT_* and LOG_* macros are operational
        https://bugs.webkit.org/show_bug.cgi?id=33020

        * wtf/Assertions.h: Set ASSERT_MSG_DISABLED, FATAL_DISABLED,
        ERROR_DISABLED, LOG_DISABLED to 1 if the compiler does not support
        variadic macros. Refactor for better readibility.

2010-01-07  Daniel Bates  <dbates@rim.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32987

        Added ENABLE_XHTMLMP flag. Disabled by default.

        * Configurations/FeatureDefines.xcconfig:

2010-01-07  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Gavin Barraclough.

        [Symbian] Port ARM traditional JIT Trampolines to RVCT
        https://bugs.webkit.org/show_bug.cgi?id=30552

        Take the GCC implementation and mechanically convert
        it to RVCT syntax.

        Use 'bx rX' instead of 'mov pc, rX' when it is available.

        Developed in cooperation with Iain Campbell and Gabor Loki.

        * JavaScriptCore.pri: Extra step to generate RVCT stubs. The 
        script generation intentionally executed all the time not just
        for RVCT targets.

        * create_rvct_stubs: Added. Perl script to expand precompiler macros
        for RVCT assembler - the template is defined in JITStubs.cpp.

        * jit/JITStubs.cpp:
        (JSC::ctiTrampoline):
        (JSC::ctiVMThrowTrampoline):
        (JSC::ctiOpThrowNotCaught):

2010-01-07  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Fix a crash seen on the buildbots.

        * runtime/JSGlobalObject.cpp:
        (JSC::JSGlobalObject::init): Disable specific function tracking here,
        instead of in WebCore, to ensure that the disabling happens before a
        specific function can be registered.

2010-01-07  Alexey Proskuryakov  <ap@apple.com>
